Replace scrollbar with fixed search bar and pagination components

--- a/src/styles/Friends.module.css
+++ b/src/styles/Friends.module.css
@@ -57,13 +57,21 @@
 .wrapper {
     background-color: white;
     width: 100%; 
+    height: 240px;
+    position: fixed;
+    z-index: 998;
+}
+
+.wrapperNoPagination{
+    background-color: white;
+    width: 100%; 
     height: 180px;
     position: fixed;
     z-index: 998;
 }
 
 .searchComponents {
-    padding-top: 110px; 
+    padding-top: 120px; 
     z-index: 999;
     position: fixed;
     top: 0;
@@ -73,7 +81,13 @@
 }
 
 .friendsList{
-    height:600px;
+    margin-top: 240px;
+    height:700px;
+}
+
+.friendsListNoPagination{
+    margin-top: 180px;
+    height:700px;
 }
 
 .results {
